tables/datafields: fix weird overflowing width bug in tables with .toggle-indicator, fixes #6461

--- a/public/assets/stylesheets/less/tables.less
+++ b/public/assets/stylesheets/less/tables.less
@@ -147,7 +147,7 @@ td.tree-elbow-line, td.tree-elbow-end {
         }
         .toggle-indicator ~ * {
             overflow: hidden;
-            text-indent: 200%;
+            text-indent: -100%;
         }
     }
 }
